# interval_trainer

./: Cargo.toml  rustfmt.toml
src/: accidental.rs  lib.rs  main.rs  note.rs  note_name.rs  scale.rs
src/chord/: quality.rs
src/game/: mod.rs  mode.rs  round.rs  scorekeeper.rs
src/interval/: canonical.rs
src/scale/: modal.rs  mode.rs
