[package]
name = "interval_trainer"
version = "0.1.0"
authors = ["Michael Morgan <morgan.michael@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.1.7"
either = "1.6.1"
once_cell = "1.5.2"
rand = "0.7.3"
